[package]
name = "m100"
version = "0.1.0"
edition = "2024"


[profile.dev]
debug = 2
opt-level = 0
incremental = true
debug-assertions = true



[profile.release]
debug = 0
lto = "fat"
opt-level = 3
strip = "symbols"
incremental = true
debug-assertions = false

[dependencies]
iced = {version = "0.13.1", features = ["image", "multi-window", "tokio", "async-std", "lazy", ]}
reqwest = "0.12.22"
dotenv = "0.15.0"
